# GCC

./: .gitignore  CMakeLists.txt  Makefile  README.MD
artifacts/syntactic_graphs/: syntactic_graphs.md
src/: main.c  main.h
src/cache_printf/: cache_printf.c  cache_printf.h
src/cli/: cli.c  cli.h
src/code_generation/: code_generation.c  code_generation.h
src/exceptions/: color_codes.h  exception.c  exception.h  exceptions_handler.c  exceptions_handler.h
src/expression_handler/: expression_handler.c  expression_handler.h
src/file_handler/: file_handler.c  file_handler.h
src/hipo_interpreter/: hipo_interpreter.c  hipo_interpreter.h
src/lexical/: lexical_analyzer.c  lexical_analyzer.h  lexical_token.c  lexical_token.h
src/logs/: color_codes.h  logs.c  logs.h
src/parser/: parser.c  parser.h
src/s_mem_alloc/: s_mem_alloc.c  s_mem_alloc.h
src/source_file/: source_file.c  source_file.h
src/string/: string.c  string.h
src/symbol_table/: symbol_table.c  symbol_table.h
src/syntactic/: syntactic_analyzer.c  syntactic_analyzer.h
tests/: lexical_tests.c  semantic_tests.c  syntactic_tests.c
tests/inputs/: invalid_bracket_comment.txt  invalid_multiline_slash_comment.txt  invalid_real.txt  invalid_slash_comment.txt  valid_id.txt  valid_interger.txt  valid_multi_comments.txt  valid_multiline_bracket_comment.txt  valid_real.txt  valid_symbols.txt
tests/templates/: invalid_bracket_comment_template.txt  invalid_multiline_slash_comment_template.txt  invalid_real_template.txt  valid_keywords_template.txt  valid_multi_comments_template.txt  (+2 more)
(+53 files in other folders)
